<resources>
    <string name="app_name">Project Manager</string>
    <string name="app_name_space">Project Manager</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_link">
        <u>Sign Up</u>
    </string>
    <string name="sign_in_link">
        <u>Sign In</u>
    </string>
    <string name="first_name_input_hint">First Name</string>
    <string name="last_name_input_hint">Last Name</string>
    <string name="email_input_hint">Email</string>
    <string name="password_input_hint">Password</string>
    <string name="confirm_password_input_hint">Confirm Password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="home_nav_button">Home</string>
    <string name="projects_nav_button">Projects</string>
    <string name="tasks_nav_button">Tasks</string>
    <string name="profile_nav_button">Profile</string>
    <string-array name="memberRole">
        <item>Admin</item>
        <item>Member</item>
    </string-array>
</resources>