<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:orientation="vertical" android:padding="20dp">
    <TextView
            android:text="@string/app_name_space"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" android:textStyle="bold"
            android:textColor="@color/primary_blue"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_name"
            android:hint="@string/first_name_input_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:startIconTint="#747074"
            app:startIconDrawable="@drawable/person_input_icon"
            app:boxStrokeColor="@color/secondary_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.15">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/secondary_blue"
                android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_name"
            android:hint="@string/last_name_input_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            app:startIconTint="#747074"
            app:startIconDrawable="@drawable/person_input_icon"
            app:boxStrokeColor="@color/secondary_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.25"
            app:layout_constraintHorizontal_bias="0.5">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/secondary_blue"
                android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:hint="@string/email_input_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            app:startIconTint="#747074"
            app:startIconDrawable="@drawable/mail_input_icon"
            app:boxStrokeColor="@color/secondary_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/last_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/secondary_blue"
                android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:hint="@string/password_input_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            app:startIconTint="#747074"
            app:startIconDrawable="@drawable/baseline_lock_24"
            app:boxStrokeColor="@color/secondary_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/secondary_blue"
                android:textColorHint="@color/primary_blue"
                android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password"
            android:hint="@string/confirm_password_input_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            app:startIconTint="#747074"
            app:endIconTint="#747074"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/baseline_lock_24"
            app:boxStrokeColor="@color/secondary_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/secondary_blue"
                android:textColorHint="@color/primary_blue"
                android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    
    <Button
            android:id="@+id/containedButton"
            android:text="@string/sign_up"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="26dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/primary_blue"
            android:textColor="@color/snow_white"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/containedButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:id="@+id/signin1"
                android:text="@string/already_have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"/>

        <TextView
                android:id="@+id/signin2"
                android:text="@string/sign_in_link"
                android:textColor="@color/primary_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="loadSignInLayout"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>