<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:text="Your Profile"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" android:textStyle="bold"
            android:textColor="@color/primary_blue"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="26dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:id="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="parent">
        <TextView
                android:textSize="20sp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/first_name_label"
                android:text="@string/first_name_input_hint"/>
        <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/first_name"
                android:text="Emri"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="26dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            android:id="@+id/linearLayout4" app:layout_constraintStart_toStartOf="parent">
        <TextView
                android:textSize="20sp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/last_name_label"
                android:text="@string/last_name_input_hint"/>
        <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/last_name"
                android:text="Mbiemri"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="26dp"
            android:layout_marginStart="50dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" app:layout_constraintStart_toStartOf="parent">
        <TextView
                android:textSize="20sp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/email_label"
                android:text="@string/email_input_hint"/>
        <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:text="Emaili"/>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>